--- a/app/src/main/res/layout/fragment_editar_album.xml
+++ b/app/src/main/res/layout/fragment_editar_album.xml
@@ -28,11 +28,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="BORRADOR"
-        android:textSize="14sp"
-        android:textColor="#00796B"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:padding="6dp"
+        android:background="@drawable/bg_estado_borrador"
+        android:textColor="@android:color/black"
         app:layout_constraintTop_toBottomOf="@id/txtNombreAlbum"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="4dp"/>
+        app:layout_constraintStart_toStartOf="parent"/>
+
+
 
     <!-- =========================
          LISTA DE PLANTAS
