--- a/app/src/main/res/layout/fragment_lista_plantas.xml
+++ b/app/src/main/res/layout/fragment_lista_plantas.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white">
@@ -49,8 +50,11 @@
         <!-- Botón ordenar -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnOrdenarAZ"
-            android:layout_width="60dp"
+            android:layout_width="wrap_content"
             android:layout_height="60dp"
+            android:minWidth="0dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
             android:text="A-Z"
             android:textStyle="bold"
             android:textColor="@color/teal_primary"
@@ -144,30 +148,51 @@
 
 
         <!-- Lista -->
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerPlantas"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="20dp"
             android:clipToPadding="false"
-            android:paddingBottom="80dp"
-            app:layout_constraintTop_toBottomOf="@id/cardSearch"
+            android:paddingBottom="140dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/cardSearch"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnVolverEditarAlbum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="16dp"
+            android:paddingStart="20dp"
+            android:paddingEnd="20dp"
+            android:visibility="gone"
+            android:backgroundTint="@color/teal_light"
+            android:text="Finalizar agregar plantas"
+            android:textColor="@color/teal_primary"
+            app:cornerRadius="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <!-- FAB -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAgregarPlanta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        android:layout_margin="16dp"
+        android:contentDescription="Agregar Planta"
         android:src="@drawable/ic_add"
-        android:backgroundTint="@color/teal_primary"
-        android:tint="@android:color/white"
-        app:layout_anchorGravity="bottom|end"
-        app:layout_anchor="@id/recyclerPlantas"/>
+        app:backgroundTint="@color/teal_primary"
+        app:tint="@android:color/white"
+        app:layout_anchor="@id/recyclerPlantas"
+        app:layout_anchorGravity="bottom|end" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
